<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="200dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/nb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6DF0C"
        android:text="@string/number1"
        android:textAllCaps="true"
        android:onClick="Number1"/>

    <Button
        android:id="@+id/nb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#00BCD4"
        android:text="@string/number2"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/nb1" />

    <Button
        android:id="@+id/nb3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#F44336"
        android:text="@string/number3"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/nb2" />

    <Button
        android:id="@+id/nb4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#8BC34A"
        android:text="@string/number4"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/nb3" />

</androidx.constraintlayout.widget.ConstraintLayout>